--- a/style.css
+++ b/style.css
@@ -41,5 +41,72 @@ html, body {
   height: 20%;
   width: 100%;
   z-index: 2;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+#section-opening .image-overlay .top .logo {
+  padding-top: 1%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  height: 100%;
+  margin-left: 5%;
+}
+
+#section-opening .image-overlay .top .logo img {
+  width: auto;
+  height: 100%;
+}
+
+#section-opening .image-overlay .top .button {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -ms-flex-item-align: center;
+      align-self: center;
+  border-radius: 50px;
+  width: 17%;
+  height: 40%;
+  margin-right: 10%;
+  background: #026281;
+}
+
+#section-opening .image-overlay .top .button:hover {
+  background: darkgoldenrod;
+  -webkit-transition: 0.2s ease-in-out;
+  transition: 0.2s ease-in-out;
+  cursor: pointer;
+}
+
+#section-opening .image-overlay .top .button a {
+  color: white;
+  text-decoration: none;
+  font-size: 1.5rem;
+  font-weight: 900;
+}
+
+/*
+Designed to appear on monitors or mobile phones.
+*/
+@media screen and (max-width: 600px) {
+  #section-opening .image-overlay .top {
+    height: 15%;
+  }
+  #section-opening .image-overlay .top .button {
+    width: 100%;
+    margin-right: 5%;
+    margin-left: 5%;
+  }
 }
 /*# sourceMappingURL=style.css.map */
