--- a/style.scss
+++ b/style.scss
@@ -13,16 +13,16 @@ html, body{
     flex-flow: wrap;
 }
 
-$black-color: rgba(0, 0, 0, 0.75);
+$black-color: rgba(0, 0, 0, 0.5);
 $purple-color: rgba(32, 4, 65, 0.8);
 $blue-color: rgb(2, 98, 129);
-$light-blue-color: rgb(8, 105, 185);
-$gray-color: rgb(107,99,99);
+$light-blue-color: rgb(15, 144, 250);
+$gray-color: rgb(68, 67, 67);
 $light-gray-color: rgb(157,152,152);
-$dark-white-color: rgb(245,245,245);
+$dark-white-color: rgb(211, 211, 211);
 
 #section-opening{
-    background: url("images/citybk.jpg");    
+    background: url("images/citybk2.jpg");    
     overflow: hidden;
     background-position: center;
     background-repeat: no-repeat;
@@ -79,25 +79,335 @@ $dark-white-color: rgb(245,245,245);
                 }
                 a{
                     color: white;
+                    font-family: sans-serif;
                     text-decoration: none;
                     font-size: 1.5rem;
-                    font-weight: 900;
+                    font-weight: bold;
                 }
+            }
+        }
+        .bottom{   
+
+            margin-top: 3%;
+            margin-bottom: 3%;
+            width: 100%;
+            height: 100%;
+            text-align: center;
+             h1, h3, h4, h5, i{
+                color: white;
+            }
+            h1{
+                margin-top: 5%;
+                margin-bottom: 1%;
+                font-size: 7rem;
+                text-transform: uppercase;
+                font-family: 'Press Start 2P', cursive;
+            }  
+            h3{
+                font-size: 3rem;
+                font-weight: normal;
+                margin-bottom: 5%;
+                font-family: sans-serif;
+                text-transform: uppercase;
+            }
+            h4{
+                font-size: 2rem;
+                margin-bottom: 1.5%;
+                font-family: sans-serif;
+            }
+            h5{
+                font-family: sans-serif;
+                font-size: 1.2rem;
+                margin-bottom: 3%;
+                font-weight: lighter;
+            }
+            .fas:hover{
+                color: darkgoldenrod;
             }
         }
     }
 }
-
-/*
-Designed to appear on monitors or mobile phones.
-*/
-@media screen and (max-width: 600px) {
-    #section-opening .image-overlay .top {
-      height: 15%;
+#section-time{
+    width: 100%;
+    height: 50%;
+    background: $blue-color;
+    color: white;
+    .sentence-holder{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        height: 30%;
+        font-family: sans-serif;
+        font-weight: lighter;
+        font-size: 1.5rem;
     }
-    #section-opening .image-overlay .top .button{
+    .time-container{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        height: 70%;
+        color: white;
+        justify-content: space-around;
+        padding-left: 25%;
+        padding-right: 25%;
+        padding-bottom: 5%;
+        .top{
+            text-align: center;
+            font-size: 4rem;
+            font-family: sans-serif;
+        }
+        .bottom{
+            text-transform: uppercase;
+            text-align: center;
+            font-size: 1.5rem;
+            font-family: sans-serif;
+        }
+    }
+}
+#section-steps{
+    width: 100%;
+    height: 50%;
+    background: white;
+    .sentence-holder{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        height: 30%;
+        font-family: sans-serif;
+        font-weight: lighter;
+        font-size: 1.5rem;
+        color: $gray-color;
+    }
+    .steps-container{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        height: 70%;
+        color: white;
+        justify-content: space-evenly;
+        padding-left: 10%;
+        padding-right: 10%;
+        padding-bottom: 5%;
+        .top{
+            color: $gray-color;
+            font-size: 0.7rem;
+            font-family: sans-serif;
+            margin-bottom: 10%;
+        }
+        .num{
+            margin-left: 4%;
+            margin-right: 2%;
+            height: 50%;
+            h1{
+                font-size: 7rem;
+                color: $light-blue-color;
+            }
+        }
+        .bottom{
+            width: 100%;
+            color: $gray-color;
+            font-size: 1.2rem;
+            line-height: 1.5;
+            text-align: center;
+            font-family: sans-serif;
+            h5{
+                text-align: start;
+            }
+        }
+    }
+}
+#section-presenters{
+    width: 100%;
+    height: 80%;
+    background: $dark-white-color;
+    padding-left: 10%;
+    padding-right: 10%;
+    .sentence-holder{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 30%;
+        font-size: 2rem;
+        font-family: sans-serif;
+        color: black;
+        span{
+            font-weight: bold;
+        }
+    }
+    .items-container{
+        background: $dark-white-color;
+        display: flex;
+        justify-content: space-around;
         width: 100%;
-        margin-right: 5%;
-        margin-left: 5%;
-      }
-  }
+        height: 60%;
+        .item{
+            text-align: center;
+            background: white;
+            div{
+                padding-top: 3%;
+                height: 50%;
+                width: 100%;
+                margin-bottom: 25%;
+                img{
+                    border-radius: 50%;
+                    width: 90%;
+                    height: auto;
+                }
+            }
+        .name{
+            color: black;
+            font-family: sans-serif;
+            margin-bottom: 10%;
+        }
+        .role{
+            color: $gray-color;
+            width: 100%;
+            padding-left: 3%;
+            padding-right: 3%;
+            font-family: sans-serif;
+            text-align: center;
+        }
+        }
+    }
+}
+#section-quote{
+    background: url("images/quotebk.jpg");    
+    overflow: hidden;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
+    width: 100%;
+    height: 40%;
+
+    .image-overlay{
+        background: $purple-color;
+        overflow: hidden;
+        height: 100%;
+        width: 100%;
+        z-index: 2;
+
+        .quote-container{
+            padding-top: 5%;
+            color: white;
+            font-family: sans-serif;
+            font-style: italic;
+            h1{
+                text-align: center;
+            }
+            h3{
+                margin-top: 2%;
+                text-align: center;
+            }
+        }
+    }
+}
+#section-schedule{
+    width: 100%;
+    height: 60%;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: .7fr 2fr 2fr;
+    .h1-container{
+        margin: auto;
+        text-align: center;
+        padding-top: 20px;
+        grid-column: 1/3;
+        grid-row: 1/2;
+        h1{
+            display: inline;
+            width: 20%;
+            font-size: 2.5rem;
+            border-style: solid;
+            border-color: $blue-color;
+            border-top-style: none;
+            border-left-style: none;
+            border-right-style: none;
+        }
+    }
+    h3{
+        font-size: 2rem;
+        margin-bottom: 10px;
+        text-align: center;
+        font-family: sans-serif;
+    }
+    .a{
+        font-size: 2rem;
+        font-weight: bold;
+        margin-bottom: 10px;
+        text-align: center;
+
+    }
+    .b{
+        color: $gray-color;
+        font-size: 2rem;
+        text-align: center;
+    }
+}
+#section-ending{
+    background: url("images/citybk2.jpg");    
+    overflow: hidden;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 100%;
+    height: 50%;
+    .image-overlay{
+        background: $purple-color;
+        overflow: hidden;
+        height: 100%;
+        width: 100%;
+        z-index: 2;
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr 1fr;
+        grid-template-rows: 1fr 1fr 1fr 1fr;
+        div{
+            justify-self: center;
+            grid-column: 2/4;
+            grid-row: 2/3;
+            text-align: center;
+            font-weight: bold;
+            font-size: 4rem;
+            color: white;
+        }
+        .button{
+            justify-self: center;
+            grid-column: 2/4;
+            grid-row: 3/4;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            align-self: center;
+            border-radius: 50px;
+            width: 80%;
+            height: 80%;
+            background: $blue-color;
+            &:hover{
+                background: darkgoldenrod;
+                transition: 0.2s ease-in-out;
+                cursor: pointer;
+            }
+            a{
+                color: white;
+                font-family: sans-serif;
+                text-decoration: none;
+                font-size: 1.5rem;
+                font-weight: bold;
+            }
+        }
+    }
+}
+#section-copyright{
+    background: $blue-color;
+    height: 10%;
+    width: 100%;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr;
+    h3{
+        text-align: center;
+        color: white;
+        margin: auto;
+        word-spacing: 4px;
+    }
+}
